# DPRM-2026

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  add_copyright.sh  log.txt  run.sh
cmake/: DPRMConfig.cmake.in  DPRMConfig.cmake.in.nocuda  OpenRMConfig.cmake.in  OpenRMConfig.cmake.in.nocuda  dp_version.h.in  version.h.in
cuda/: CMakeLists.txt
cuda/include/: cudatools.h  resize.cuh
cuda/src/resize/: affine.cu  kernal.cu  resize.cu
demo/: CMakeLists.txt  hik_lib.cpp  tensorrt_demo.cpp  uvc_cam.cpp  uvc_lib.cpp
doc/: Jetson配置.md
docker/: Dockerfile
include/: dprm.h  openrm.h
include/attack/: attack.h  deadlocker.h  filtrate.h  freshcenter.h
include/kalman/: kalman.h
include/kalman/filter/: ekf.h  kf.h
include/kalman/interface/: antitopV1.h  antitopV2.h  antitopV3.h  outpostV1.h  outpostV2.h  runeV1.h  runeV2.h  trackqueueV1.h  trackqueueV2.h  trackqueueV3.h  trackqueueV4.h  trajectoryV1.h
include/kalman/model/: ekf_center_model.h  ekf_single_model.h  kf_single_model.h
include/pointer/: pointer.h
include/solver/: polynomial.h  solvepnp.h  ternary.hpp
include/structure/: camera.hpp  cyclequeue.hpp  enums.hpp  shm.hpp  slidestd.hpp  slideweighted.hpp  speedqueue.hpp  stamp.hpp  swapbuffer.hpp  vector6d.hpp
include/tensorrt/: README.md  logging.h  macros.h  tensorrt.h
include/uniterm/: uniterm.h
include/utils/: delay.h  print.h  serial.h  tf.h  timer.h
include/video/: video.h
include/video/daheng/: DxImageProc.h  GxIAPI.h
include/video/hik/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvISPErrorDefine.h  PixelType.h
setup/: OpenCV-4-10-0-amd64.sh  OpenCV-4-10-0-arm64.sh
src/attack/: CMakeLists.txt  attack.cpp  deadlocker.cpp  display.cpp  filtrate.cpp  freshcenter.cpp
src/kalman/: CMakeLists.txt  antitopV1.cpp  antitopV2.cpp  antitopV3.cpp  outpostV1.cpp  outpostV2.cpp  runeV1.cpp  runeV2.cpp  trackqueueV1.cpp  trackqueueV2.cpp  trackqueueV3.cpp  trackqueueV4.cpp  trajectoryV1.cpp
src/pointer/: CMakeLists.txt  color.cpp  display.cpp  finder.cpp  getter.cpp  histogram.cpp  judge.cpp  reprojection.cpp  setter.cpp
src/solver/: CMakeLists.txt  polynomial.cpp  solvepnp.cpp
src/tensorrt/: CMakeLists.txt  nms.cpp  nmsV5C36.cpp  tensorrt.cpp
src/uniterm/: CMakeLists.txt  dashboard.cpp  message.cpp  monitor.cpp  oscilloscope.cpp
src/utils/: CMakeLists.txt  delay.cpp  print.cpp  serial.cpp  tf_rotate.cpp  tf_tools.cpp  tf_trans.cpp  timer.cpp
src/video/: CMakeLists.txt  daheng.cpp  hikang.cpp  tools.cpp  uvc.cpp
terminal/: CMakeLists.txt  run.sh
terminal/include/: terminal.h
terminal/src/: main.cpp  terminal.cpp
