add_library(
    dprm_attack
        SHARED
)
target_sources(
    dprm_attack
        PRIVATE
        ${CMAKE_SOURCE_DIR}/src/attack/attack.cpp
        ${CMAKE_SOURCE_DIR}/src/attack/deadlocker.cpp
        ${CMAKE_SOURCE_DIR}/src/attack/freshcenter.cpp
        ${CMAKE_SOURCE_DIR}/src/attack/filtrate.cpp
        ${CMAKE_SOURCE_DIR}/src/attack/display.cpp
)
target_include_directories(
    dprm_attack
        PRIVATE
        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include/dprm>
)
