add_library(
    dprm_solver
        SHARED
)
target_sources(
    dprm_solver
        PRIVATE
        ${CMAKE_SOURCE_DIR}/src/solver/solvepnp.cpp
)
target_include_directories(
    dprm_solver
        PRIVATE
        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include/dprm>
)
