add_library(
    dprm_tensorrt
        SHARED
)
target_sources(
    dprm_tensorrt
        PRIVATE
        ${CMAKE_SOURCE_DIR}/src/tensorrt/nms.cpp
        ${CMAKE_SOURCE_DIR}/src/tensorrt/nmsV5C36.cpp
        ${CMAKE_SOURCE_DIR}/src/tensorrt/tensorrt.cpp
)
target_include_directories(
    dprm_tensorrt
        PRIVATE
        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include/dprm>
)

target_link_libraries(
    dprm_tensorrt
        PRIVATE
        nvinfer
        nvinfer_plugin
        nvonnxparser
        cudart
        cublas
)
