add_library(
    dprm_uniterm
        SHARED
)
target_sources(
    dprm_uniterm
        PRIVATE
        ${CMAKE_SOURCE_DIR}/src/uniterm/message.cpp
        ${CMAKE_SOURCE_DIR}/src/uniterm/monitor.cpp
        ${CMAKE_SOURCE_DIR}/src/uniterm/dashboard.cpp
        ${CMAKE_SOURCE_DIR}/src/uniterm/oscilloscope.cpp
)
target_include_directories(
    dprm_uniterm
        PRIVATE
        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include/dprm>
)
target_link_libraries(
    dprm_uniterm
        ncurses
)
